--- a/PRS_EA.Rmd
+++ b/PRS_EA.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "PRS_EA"
+title: "PGS Educational Attainment"
 output: html_document
 author: Sebastian Marten & Amaury Pelzer
 ---
@@ -345,7 +345,7 @@ Based on these findings it appears that time point 9 is a cut-off where the numb
 rm(list= setdiff(ls(), c("long_dat", "wide_dat")))
 ```
 
-# Polygenic Risk Score for Educational attainment
+# Polygenic Score for Educational attainment
 
 ```{r, echo=FALSE, message=FALSE}
 # Read in the PGS send to us by Rick
@@ -513,7 +513,7 @@ rm(filtered_long_dat, box1, box2, res, res2)
 
 Next the survival analysis was conducted for the genetic capacity of educational attainment and the residual educational attainment.
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, fig.width = 10}
 
 ################################################################################
 # MMSE~Genetic Capacity
@@ -586,9 +586,9 @@ logrank_test$MMSE_res <- long_dat %>%
   survdiff(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_res, data = .)
 ```
 
-The difference between the high and low capacity/residual Educational attainment are `r logrank_test$MMSE_PGS$pvalue` and `r logrank_test$MMSE_res$pvalue` respectively. In the next step the surivival analysis was conducted stratified for genetic capacity for educational attainment.
+The difference between the high and low capacity/residual Educational attainment are `r logrank_test$MMSE_PGS$pvalue` and `r logrank_test$MMSE_res$pvalue` respectively. In the next step the survival analysis was conducted stratified for genetic capacity for educational attainment.
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, fig.width = 12}
 
 par(mfrow=c(1,3)) # Set parameters for plots
 
