--- a/PRS_EA.Rmd
+++ b/PRS_EA.Rmd
@@ -380,8 +380,17 @@ cor.test(long_dat$PTEDUCAT, long_dat$EA22, method="pearson")
 ## Check linear regression assumptions
 
 ```{r}
+x <- lm(PTEDUCAT~PTGENDER, data=wide_dat)
+boxplot(PTEDUCAT~PTGENDER, data=wide_dat)
+
+y <- lm(EA22~PTGENDER, data=wide_dat)
+boxplot(EA22~PTGENDER, data=wide_dat)
+
+# compare n gender
+table(wide_dat$PTGENDER)
+
 # Linear regression model
-model <- lm(PTEDUCAT~EA22+AGE+PTGENDER,data=long_dat)
+model <- lm(PTEDUCAT~EA22+AGE+PTGENDER + AGE*PTGENDER,data=wide_dat)
 
 # Check model assumptions
 check_model(model)
@@ -393,13 +402,13 @@ To get the residual we regressed the polygenic risk score for educational attain
 
 ```{r, echo=FALSE}
 # Create the residuals given two covariates AGE and Sex
-results <- lm(PTEDUCAT~EA22+AGE+PTGENDER,data=long_dat)
+results <- lm(PTEDUCAT~EA22+AGE+PTGENDER+AGE*PTGENDER,data=wide_dat)
 
 # Standardize the residuals and append to data frame
-long_dat$res <- rstandard(results)
+wide_dat$res <- rstandard(results)
 
 # Create density plot of the residuals
-ggplot(long_dat, aes(x = res)) +
+ggplot(wide_dat, aes(x = res)) +
   geom_density(fill = "orange", alpha = 0.5) +
   labs(x = "Residual Score", y = "Density") +
   ggtitle("Distribution of Residuals")
@@ -433,10 +442,10 @@ Using the ntile function from dplyr, the lower tertile will be assigned value 1 
 
 ```{r, echo=FALSE}
 # Divide the standardized residuals into upper, middle and lower quartile
-long_dat$thirtile_res <- ntile(long_dat$res, 3)
+wide_dat$thirtile_res <- ntile(wide_dat$res, 3)
 
 # Divide the PGS score for educational attainment into upper, middle and lower quartile
-long_dat$thirtile_PGS <- ntile(long_dat$EA22, 3)
+wide_dat$thirtile_PGS <- ntile(wide_dat$EA22, 3)
 ```
 
 ## Mini-Mental State Examination (MMSE)
@@ -448,7 +457,7 @@ long_dat$thirtile_PGS <- ntile(long_dat$EA22, 3)
 cvalue <- list() # initialize list of cut-off values
 logrank_test <- list() # initialize list of log-rank tests
 
-long_dat$MMSE_norm <- normMMSE(long_dat$MMSE) # normalize MMSE
+wide_dat$MMSE_norm <- normMMSE(wide_dat$MMSE) # normalize MMSE
 
 cvalue$MMSE_norm <- wide_dat %>% # Calculate cut-off value for normalized MMSE
     filter(DX_0 == "CN") %>%
@@ -457,7 +466,7 @@ cvalue$MMSE_norm <- wide_dat %>% # Calculate cut-off value for normalized MMSE
     ) %>%
     pull(value)
 
-long_dat$MMSE_cut <- ifelse(long_dat$MMSE_norm < cvalue$MMSE_norm, 1, 0) # Group individuals by cut-off value
+wide_dat$MMSE_cut <- ifelse(wide_dat$MMSE_norm < cvalue$MMSE_norm, 1, 0) # Group individuals by cut-off value
 
 ```
 
@@ -466,11 +475,11 @@ long_dat$MMSE_cut <- ifelse(long_dat$MMSE_norm < cvalue$MMSE_norm, 1, 0) # Group
 To see if it is necessary to stratify for age groups effect of polygenic risk score for EA and age group was tested using linear regression. The results are displayed below.
 
 ```{r, echo=FALSE}
-filtered_long_dat <- long_dat %>% #filter out NA cases (== AGE is not between 60-75)
+filtered_wide_dat <- wide_dat %>% #filter out NA cases (== AGE is not between 60-75)
   filter(!is.na(Age_Group), VISCODE==0)
 
 # Boxplot for MMSE by Age Group
-box1 <- ggplot(filtered_long_dat, aes(x = factor(Age_Group), y = MMSE)) +
+box1 <- ggplot(filtered_wide_dat, aes(x = factor(Age_Group), y = MMSE)) +
   geom_boxplot(fill = c("#6d8fa6", "#8596a1","#bbceed"), color = "black") + # Set fill and border colours
   scale_x_discrete(labels = c("60-65", "66-70", "71-75")) + # Set x axis scale labels
   labs(x = "Age Group", y = "MMSE Score") +
@@ -486,7 +495,7 @@ box1 <- ggplot(filtered_long_dat, aes(x = factor(Age_Group), y = MMSE)) +
 
 
 # Boxplot for normMMSE by Age Group
-box2 <- ggplot(filtered_long_dat, aes(x = factor(Age_Group), y = MMSE_norm)) +
+box2 <- ggplot(filtered_wide_dat, aes(x = factor(Age_Group), y = MMSE_norm)) +
   geom_boxplot(fill = c("#6d8fa6", "#8596a1","#bbceed"), color = "black") + # Set fill and border colours
   scale_x_discrete(labels = c("60-65", "66-70", "71-75")) + # Set x axis scale labels
   labs(x = "Age Group", y = "MMSE Score") +
@@ -500,14 +509,14 @@ box2 <- ggplot(filtered_long_dat, aes(x = factor(Age_Group), y = MMSE_norm)) +
   ggtitle("Boxplot of norm MMSE at baseline by Age Group") +
   theme(plot.title = element_text(size = 9)) # Custom title
 
-res <- lm(MMSE ~ EA22 + Age_Group, data = long_dat)
-res2 <- lm(MMSE_norm ~ EA22 + Age_Group, data = long_dat)
+res <- lm(MMSE ~ EA22 + Age_Group, data = wide_dat)
+res2 <- lm(MMSE_norm ~ EA22 + Age_Group, data = wide_dat)
 
 grid.arrange(box1, box2, ncol = 2)
 summary(res)
 summary(res2)
 
-rm(filtered_long_dat, box1, box2, res, res2)
+rm(filtered_wide_dat, box1, box2, res, res2)
 ```
 
 ### MMSE Survival Analysis
@@ -522,7 +531,7 @@ Next the survival analysis was conducted for the genetic capacity of educational
 
 # Fit the Kaplan-Meier estimator (MMSE~PGS)
 
-surv_fit <- long_dat %>%
+surv_fit <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, AGE>=60, AGE<=75) %>%
   survfit(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_PGS, data = .)
 
@@ -547,7 +556,7 @@ axis(1, lwd = 1)  # Change x-axis thickness
 axis(2, lwd = 1)  # Change y-axis thickness
 
 # Log Rank Test (MMSE~PGS)
-logrank_test$MMSE_PGS <- long_dat %>%
+logrank_test$MMSE_PGS <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, thirtile_PGS != 2, AGE>=60, AGE<=75) %>%
   survdiff(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_PGS, data = .)
 
@@ -557,7 +566,7 @@ logrank_test$MMSE_PGS <- long_dat %>%
 
 # Fit the Kaplan-Meier estimator (MMSE~res)
 
-surv_fit <- long_dat %>%
+surv_fit <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, AGE>=60, AGE<=75) %>%
   survfit(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_res, data = .)
 
@@ -582,7 +591,7 @@ axis(2, lwd = 1)  # Change y-axis thickness
 
 # Log Rank Test (MMSE~res)
 
-logrank_test$MMSE_res <- long_dat %>%
+logrank_test$MMSE_res <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, thirtile_res != 2, AGE>=60, AGE<=75) %>%
   survdiff(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_res, data = .)
 ```
@@ -599,7 +608,7 @@ par(mfrow=c(1,3)) # Set parameters for plots
 
 # Fit the Kaplan-Meier estimator
 
-surv_fit <- long_dat %>%
+surv_fit <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, AGE>=60, AGE<=75, thirtile_PGS==1) %>%
   survfit(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_res, data = .)
 
@@ -624,7 +633,7 @@ axis(2, lwd = 1)  # Change y-axis thickness
 
 # Log Rank Test 
 
-logrank_test$MMSE_res_low <- long_dat %>%
+logrank_test$MMSE_res_low <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, 
          thirtile_res != 2, 
          thirtile_PGS==1) %>% # Low PGS
@@ -636,7 +645,7 @@ logrank_test$MMSE_res_low <- long_dat %>%
 
 # Fit the Kaplan-Meier estimator
 
-surv_fit <- long_dat %>%
+surv_fit <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, AGE>=60, AGE<=75, thirtile_PGS==2) %>%
   survfit(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_res, data = .)
 
@@ -661,7 +670,7 @@ axis(2, lwd = 1)  # Change y-axis thickness
 
 # Log Rank Test 
 
-logrank_test$MMSE_res_mid <- long_dat %>%
+logrank_test$MMSE_res_mid <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, 
          thirtile_res != 2, 
          thirtile_PGS==2) %>% # Middle PGS
@@ -673,7 +682,7 @@ logrank_test$MMSE_res_mid <- long_dat %>%
 
 # Fit the Kaplan-Meier estimator
 
-surv_fit <- long_dat %>%
+surv_fit <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, AGE>=60, AGE<=75, thirtile_PGS==3) %>%
   survfit(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_res, data = .)
 
@@ -698,7 +707,7 @@ axis(2, lwd = 1)  # Change y-axis thickness
 
 # Log Rank Test
 
-logrank_test$MMSE_res_high <- long_dat %>%
+logrank_test$MMSE_res_high <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, 
          thirtile_res != 2, 
          thirtile_PGS==3) %>% # High PGS
@@ -711,7 +720,7 @@ logrank_test$MMSE_res_high <- long_dat %>%
 # Histogram # people by time point by group by outcome
 ################################################################################
 
-ggplot(long_dat %>% filter(!is.na(MMSE_cut)), 
+ggplot(wide_dat %>% filter(!is.na(MMSE_cut)), 
        aes(x = as.integer(VISCODE), fill = factor(MMSE_cut))) +
   geom_histogram(position = "identity", alpha = 0.6, binwidth = 2) +
   scale_fill_manual(values = c("#bbceed", "#021636"), labels = c("Normal Cognition", "Impaired Cognition")) +
@@ -742,7 +751,7 @@ par(mfrow=c(1,3)) # Set parameters for plots
 
 # Fit the Kaplan-Meier estimator
 
-surv_fit <- long_dat %>%
+surv_fit <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, AGE>=60, AGE<=75, thirtile_res==1) %>%
   survfit(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_PGS, data = .)
 
@@ -767,7 +776,7 @@ axis(2, lwd = 1)  # Change y-axis thickness
 
 # Log Rank Test 
 
-logrank_test$MMSE_PGS_low <- long_dat %>%
+logrank_test$MMSE_PGS_low <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, 
          thirtile_PGS != 2, 
          thirtile_res==1) %>% # Low PGS
@@ -779,7 +788,7 @@ logrank_test$MMSE_PGS_low <- long_dat %>%
 
 # Fit the Kaplan-Meier estimator
 
-surv_fit <- long_dat %>%
+surv_fit <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, AGE>=60, AGE<=75, thirtile_res==2) %>%
   survfit(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_PGS, data = .)
 
@@ -804,7 +813,7 @@ axis(2, lwd = 1)  # Change y-axis thickness
 
 # Log Rank Test 
 
-logrank_test$MMSE_PGS_mid <- long_dat %>%
+logrank_test$MMSE_PGS_mid <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, 
          thirtile_PGS != 2, 
          thirtile_res==2) %>% # Middle PGS
@@ -816,7 +825,7 @@ logrank_test$MMSE_PGS_mid <- long_dat %>%
 
 # Fit the Kaplan-Meier estimator
 
-surv_fit <- long_dat %>%
+surv_fit <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, AGE>=60, AGE<=75, thirtile_res==3) %>%
   survfit(Surv(as.integer(VISCODE), MMSE_cut) ~ thirtile_PGS, data = .)
 
@@ -841,7 +850,7 @@ axis(2, lwd = 1)  # Change y-axis thickness
 
 # Log Rank Test
 
-logrank_test$MMSE_PGS_high <- long_dat %>%
+logrank_test$MMSE_PGS_high <- wide_dat %>%
   filter(as.integer(VISCODE) <= 9, 
          thirtile_PGS != 2, 
          thirtile_res==3) %>% # High PGS
